[UID2-2892] Implement okta group role granularity on endpoints (#232)
* Assign new roles to endpoints and validate using okta groups

* Read role mapping from config

* Rename role ALL to Default

* Rename role from Default to Maintainer

* Use minor published snapshot version

* Change config to use maintainer role name

* Use AdminConst for storing config strings

* [CI Pipeline] Released Snapshot version: 4.7.24-SNAPSHOT

* Fix role to okta group mapping config and update tests

* Remove unnecesary class

* Allow all role access in local and e2e

* update unit tests

* Fixed bug in oktagroup tostring and fix unit tests

* [CI Pipeline] Released Snapshot version: 5.0.15-SNAPSHOT

* test Clean up

* remove whitespace from config

* Throw exception and fail startup with incorrect okta config

---------

Co-authored-by: Release Workflow <unifiedid-admin+release@thetradedesk.com>